remaining parts of the first draft of the poster

--- a/doc/papers/ijcai2013/POSTER/567_poster.tex
+++ b/doc/papers/ijcai2013/POSTER/567_poster.tex
@@ -278,7 +278,9 @@ bgColorTwo=lavender,
 \tikz{\useasboundingbox (-0.2em,-0.32em) rectangle(0.2em,0.32em); \draw[draw=black,fill=lightblue,line width=0.03em] (0,0) circle(0.18em);}}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Motivation}{name=problem,column=0,row=0}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Real-world  problems  generally  involve
 several  antagonistic  objectives,  like
@@ -298,15 +300,9 @@ objectives).
 }
 
 
-\headerbox{Multiobjective Divide-and-Evolve}{name=MODAE,column=1,span=2,row=0}{
-
-XXXXXXXXX
-
-\vspace{0.3em}
-}
-
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Multiobjective EA}{name=MOEA,column=0,below=problem}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Evolutionary   Algorithms   (EAs)   are:
 metaheuristic stochastic  search,  using
@@ -322,7 +318,10 @@ indicator (\IBEAH).
 \vspace{0.3em}
 }
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Divide-and-Evolve}{name=DAE,column=0,below=MOEA}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Divide-and-Evolve (\DAE) is an
 evolutionary  planner  that   embeds   a
@@ -349,7 +348,9 @@ within  \DAE\
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Benchmark Domains}{name=bench,column=0,below=DAE}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Highly   simplified   version   of   the
 well-known   IPC   domain   \ZENOTRAVEL,
@@ -365,54 +366,114 @@ and \OPENSTACKS)
 
 % \vspace{0.3em}
 }
-\headerbox{Experiments}{name=experiments,column=1,span=2,below=MODAE}{
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\headerbox{Multiobjective Divide-and-Evolve}{name=MODAE,column=1,span=2,row=0}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Two modifications of \DAEYAHSP\ are needed to turn it into a MOEA: (i) use an
+multiobjective selection (e.g. \IBEAH) in lieu of the tournament selection,
+(ii)use the embedded planner to compute both objectives (e.g., makespan and
+cost):
+
+Because \YAHSP\ is both a temporal planner and a cost planner, two strategies
+are possible for \YAHSP\ within \MODAE: (i) it can be asked to optimize only the
+makespan (resp. the cost), (ii) to simply compute the cost (resp. the makespan)
+when executing the solution plan.
+
+In \MODAEYAHSP, the choice between both strategies is governed by user-defined weights.
+% , named respectively \WMAKESPAN\ and \WCOST. 
+For each individual, the actual strategy is randomly chosen according to those weights, and applied to all subproblems of the individual.
+
+\vspace{0.3em}
 }
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\headerbox{Experiments}{name=experiments,column=1,span=2,below=MODAE}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+Parameter tuning with \PARAMILS\ on one instance of moderate complexity in  each
+domain.  11 independent runs of 30  minutes  each.   Implementation  within  the
+\PARADISEO\ framework, running  on  Xeon  X5650@2.67GHz  processors,  on  Ubuntu
+10.04.
+
+\vspace{0.3em}
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Results}{name=results,column=1,span=2,below=experiments}{
-XXXXXXXXXX
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-XXXXXXXXXX
+% For \ZENOTRAVEL\ (simplified domains):
+\begin{itemize}\compresslist
 
-XXXXXXXXXX
+    \item \MULTIZENO6\ instance: \MOLPG is only able to find a few points far
+        away from the Pareto front. On the other hand, \MODAEYAHSP\ perfectly
+        identifies the complete Pareto front in all runs for the ``Linear'' and
+        ``Concave'' cases, while 2 runs out of 11 miss one point each in the
+        ``Convex'' case.
 
-XXXXXXXXXX
+    \item \MULTIZENO9\ instance: while \MOLPG\ fails to find a single feasible
+        plan, \MODAEYAHSP\ is able to approach the true Pareto front rather
+        robustly.
 
-XXXXXXXXXX
+\end{itemize}
 
-XXXXXXXXXX
-
-XXXXXXXXXX
-
-XXXXXXXXXX
 \begin{center}
 \includegraphics[scale=0.5]{p05_openstacks_Add_dae_pareto}  \hspace{1cm} \includegraphics[scale=0.5]{pfile3_floortile_Add_dae_pareto}\\
 \hspace{-3.cm} Openstacks5 \hspace{5.3cm} Floortile03 
 \end{center}
 
+% On multi-objectivized IPC-2011 instances:
+\begin{itemize}\compresslist
 
+    \item \ELEVATORS\ 1, \MODAEYAHSP\ and \MOLPG\ find exactly the same Pareto front,
+
+    \item \ELEVATORS\ 5 and above, \MOLPG\ is unable to find any solution, \MODAEYAHSP\ identifies some Pareto front.
+
+    \item \OPENSTACKS\ 1, 5 and 10 (small instances) \MODAEYAHSP\ clearly finds a much better Pareto front than \MOLPG.
+
+    \item \OPENSTACKS\ 15 and 20, the situation is even worse for \MOLPG, that only finds very poor solutions (w.r.t. the ones found by \MODAEYAHSP).
+
+    \item \FLOORTILE\ 0, 3 and 4, \MOLPG\ outperforms \MODAEYAHSP. However, as the instance size increases (instance 4 and above), the gap between LPG and \DAE\ decreases.
+
+\end{itemize}
 
 \vspace{0.3em}
 }
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Conclusion}{name=conclusion,column=1,span=2,below=results}{
-XXXXXXXXXX
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-XXXXXXXXXX
+\MODAE\ approach can turn any planner into a multiobjective planner, provided it
+can reason on either objectives alone (e.g., the makespan and the cost), as has
+been done here with \YAHSP. The resulting algorithm is a truly Pareto-based
+multiobjective planner, that consistently outperforms the \MOLPG\ metric-based
+approach.
 
-XXXXXXXXXX
+Meaningful multiobjective AI Planning benchmarks with gradual difficulties. The
+\MULTIZENO\  is a tunable artificial testbed, and was shown to be able to
+generate interesting Pareto fronts (e.g. convex with a knee as well as
+non-convex)
 
-XXXXXXXXXX
 \vspace{0.3em}
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Acknowledgement}{name=acknowledgment,column=1,below=conclusion,span=1,above=bottom}{
-This work was partially funded by the DESCARWIN ANR project (ANR-09-COSI-002)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Work partially funded by the DESCARWIN ANR project (ANR-09-COSI-002)
 }
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{URL}{name=URL,column=2,below=conclusion,span=1,above=bottom}{
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     QR-code
 }
 
