add a QR-code URL to the poster

--- a/doc/papers/ijcai2013/POSTER/567_poster.tex
+++ b/doc/papers/ijcai2013/POSTER/567_poster.tex
@@ -407,7 +407,8 @@ Work partially funded by the DESCARWIN ANR project (ANR-09-COSI-002).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{URL}{name=URL,column=2,below=conclusion,span=1,above=bottom}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    QR-code
+\includegraphics[scale=0.1]{qr-code_url_johann_dreo_fr_png.pdf}
+http://johann.dreo.fr/pro/
 }
 
 
