ZENOTRAVEL en gras

--- a/doc/papers/ijcai2013/POSTER/567_poster.tex
+++ b/doc/papers/ijcai2013/POSTER/567_poster.tex
@@ -321,7 +321,7 @@ has been demonstrated to be the best choice when used within \DAE.
 \headerbox{Benchmark Domains}{name=bench,column=0,below=DAE}{
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Highly simplified version of the well-known IPC domain \textcolor{purple}{\bf \sc ZENOTRAVEL}, with the exact Pareto front:
+Highly simplified version of the well-known IPC domain \textcolor{purple}{\bf ZENOTRAVEL}, with the exact Pareto front:
 
 \begin{center}
 \includegraphics[width=0.75\textwidth,angle=180]{../figures/generiqueMiniMulti180}
